# clang_refactoring_project

./: .gitignore  CMakeLists.txt  README.md  matchers_serialised.txt
.cache/clangd/index/: BranchConverter.cc.516358F4D9EE8EC9.idx  BranchsiteLister.cc.94257843CAF97155.idx  CallsiteLister.cc.B3F7B5255561C658.idx  SimpleConverter.cc.0AEF16B6449EF652.idx  bm_OR.cc.022F4BC7CD3D99A2.idx  bm_PLUS.cc.717CA751A6EA1346.idx  bm_branched.cc.70CE738812CE34EE.idx  bm_branchless.cc.AF0BA3D5897C6D38.idx  branchless_repl_gen.h.8329E67D46A2E9E9.idx  branchsite_common.h.001FB206F1EB2B9B.idx  branchsite_lister.cc.03F84835E1A25A3F.idx  branchsite_lister.h.9B36016884EF1FF7.idx  callsite_common.h.19D97BCB045563E5.idx  callsite_lister.cc.A4048761A4F92489.idx  callsite_lister.h.9307E42DBB5E1A0A.idx  callsite_lister_test.cc.D1C17DE05B96A693.idx  dump_things.cc.E6DB9657AB5A67C8.idx  dump_things.h.6D406A65BE4DFECA.idx  expression_repl_insert.cc.1B86CE1FB8665727.idx  expression_repl_insert.h.54A2385F426D2CE0.idx  if_else_simple_refactorer.h.829BEE7F7B6AA9D5.idx  if_else_simple_refactorer_test.cc.2D995B6D0DA6488B.idx  make_replacement.h.505BA559F0963671.idx  predicate_nopredicate_test.cc.8B7678493BEF4166.idx  predicate_nopredicate_test.cc.A565D31FB867581D.idx  prep_code.h.98261B7E4B42EE2F.idx  types.h.6F7605EC5718FC4B.idx  utilities.h.8432D06AA4ECF8D7.idx
doc/: Doxyfile.in
lib/: CMakeLists.txt  branchless_repl_gen.h  branchsite_common.h  branchsite_lister.cc  branchsite_lister.h  dump_things.cc  expression_repl_insert.cc  expression_repl_insert.h  if_else_simple_refactorer.h  make_replacement.h  types.h  utilities.h
src/: BranchConverter.cc  BranchsiteLister.cc  CMakeLists.txt
test/: CMakeLists.txt
test/benchmarks/: CMakeLists.txt  bm_OR.cc  bm_PLUS.cc  bm_branched.cc  bm_branchless.cc  predicate_nopredicate_test.cc
test/lib/: branchsite_lister_test.cc  callsite_lister_test.cc  if_else_simple_refactorer_test.cc  prep_code.h
test/test-progs/: CMakeLists.txt  compile_commands.json  if_else_basic.cc  if_else_basic.cc.bk  predicate_nopredicate_test.cc  simple_if_else.cc
test/test-progs/.cache/clangd/index/: if_else_basic.cc.1D2D771C2E8A34EA.idx
